# ContourProject

./: .gitignore  CMakeLists.txt  ContourProject.sln  ContourProject.vcxproj  ContourProject.vcxproj.filters  README.md  build.bat  cMakeLists.txt
include/: Arc.h  Config.h  Contour.h  Line.h  Line2.h  Point2.h  Segment.h  Vector2.h
src/: Arc.cpp  Contour.cpp  Line.cpp  Line2.cpp  Point2.cpp  Vector2.cpp  main.cpp
tests/: ArcTests.cpp  ContourEdgeCasesTests.cpp  ContourFromPoints.cpp  ContourTests.cpp  LineStripTests.cpp  ThreadedTestContour.cpp  test_main.cpp
